<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settin_page">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/Setting"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rescan">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Rescan_message"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textColor="@color/text_color"
                android:fontFamily="sans-serif-medium"
                android:textSize="20sp"
                android:layout_marginStart="16dp"
                />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/reset">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Reset_history"
                android:textColor="@color/text_color"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:fontFamily="sans-serif-medium"
                android:textSize="20sp"
                android:layout_marginStart="16dp"
                />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/currency">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_currency"
                    android:textColor="@android:color/black"
                    android:paddingTop="12dp"
                    android:paddingBottom="8dp"

                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:layout_marginStart="16dp"
                    />
            </LinearLayout>



        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"

            android:id="@+id/notif">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Notifications"
                    android:textColor="@android:color/black"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:layout_marginStart="16dp"
                    />

            </LinearLayout>



        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"

            android:id="@+id/month_per">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Month_peroid"
                android:textColor="@android:color/black"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:fontFamily="sans-serif-medium"
                android:textSize="20sp"
                android:layout_marginStart="16dp"
                />

        </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"

            android:id="@+id/about">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/About"
                    android:textColor="@android:color/black"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:layout_marginStart="16dp"
                    />

            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>